[package]
name = "gitlet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = { version = "0.1.1", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
sha1 = "0.10.1"
